--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "pg": "^8.7.3",
     "pug": "2.0.0-beta11",
